--- a/assets/src/scss/components/common/button/_buttons.scss
+++ b/assets/src/scss/components/common/button/_buttons.scss
@@ -51,7 +51,7 @@ input[type="submit"] {
 \*------------------------------------*/
 .c-btn--arrows-small {
   background-color: $castpress_neutral_gray_light_color;
-  color: $castpress_main_accent_color !important;
+  color: $castpress_quaternary_color !important;
 
   .dashicons {
     padding-left: 0px;
